Added base data loader, table changes and other things

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Vaadin ###
+
+src/main/frontend/generated
+
+vite.config.ts
+vite.generated.ts
+types.d.ts
+
+*.ts
+
+tsconfig.json
